// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartAreaWrapper /> (native) renders a horizontal reference line (y) 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="chart-area-container"
    display="flex"
    flexDirection="column"
    height="100%"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <View
      onLayout={[Function]}
      onMoveShouldSetResponder={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "width": "100%",
        }
      }
      testID="chart-area-scrub-surface"
    />
  </View>
</View>
`;

exports[`<ChartAreaWrapper /> (native) renders a single area chart 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="chart-area-container"
    display="flex"
    flexDirection="column"
    height="100%"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <View
      onLayout={[Function]}
      onMoveShouldSetResponder={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "width": "100%",
        }
      }
      testID="chart-area-scrub-surface"
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "paddingTop": 4,
        }
      }
    >
      <View
        accessibilityLabel="Team A, selected"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        data-blade-component="chart-legend-item-teamA"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 8,
            "marginVertical": 2,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "hsla(218, 89%, 51%, 1)",
              "borderRadius": 2,
              "height": 12,
              "marginRight": 4,
              "width": 12,
            }
          }
        />
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={25}
          fontStyle="normal"
          fontWeight="regular"
          letterSpacing={50}
          lineHeight={25}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 10,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": -0.13,
                "lineHeight": 13,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
          textDecorationLine="none"
        >
          Team A
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ChartAreaWrapper /> (native) renders a vertical reference line (x) 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="chart-area-container"
    display="flex"
    flexDirection="column"
    height="100%"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <View
      onLayout={[Function]}
      onMoveShouldSetResponder={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "width": "100%",
        }
      }
      testID="chart-area-scrub-surface"
    />
  </View>
</View>
`;

exports[`<ChartAreaWrapper /> (native) renders stacked areas 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="chart-area-container"
    display="flex"
    flexDirection="column"
    height="100%"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <View
      onLayout={[Function]}
      onMoveShouldSetResponder={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "width": "100%",
        }
      }
      testID="chart-area-scrub-surface"
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "paddingTop": 4,
        }
      }
    >
      <View
        accessibilityLabel="Team A, selected"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        data-blade-component="chart-legend-item-teamA"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 8,
            "marginVertical": 2,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "hsla(218, 89%, 51%, 1)",
              "borderRadius": 2,
              "height": 12,
              "marginRight": 4,
              "width": 12,
            }
          }
        />
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={25}
          fontStyle="normal"
          fontWeight="regular"
          letterSpacing={50}
          lineHeight={25}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 10,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": -0.13,
                "lineHeight": 13,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
          textDecorationLine="none"
        >
          Team A
        </Text>
      </View>
      <View
        accessibilityLabel="Team B, selected"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        data-blade-component="chart-legend-item-teamB"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 8,
            "marginVertical": 2,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "hsla(153, 100%, 30%, 1)",
              "borderRadius": 2,
              "height": 12,
              "marginRight": 4,
              "width": 12,
            }
          }
        />
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={25}
          fontStyle="normal"
          fontWeight="regular"
          letterSpacing={50}
          lineHeight={25}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 10,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": -0.13,
                "lineHeight": 13,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
          textDecorationLine="none"
        >
          Team B
        </Text>
      </View>
    </View>
  </View>
</View>
`;
